--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.16",
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7",
-    "react-native-screens": "~3.11.1",
-    "react-native-safe-area-context": "4.2.4",
-    "expo-updates": "~0.13.4"
+    "expo": "^48.0.0",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-web": "~0.18.11",
+    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.5.0",
+    "expo-updates": "~0.16.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
